Reflecting changes from move of basic_operations.py to NDSL

--- a/examples/notebook/test_functionality.ipynb
+++ b/examples/notebook/test_functionality.ipynb
@@ -161,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyFV3.stencils.basic_operations import copy_defn\n",
+    "from ndsl.stencils.basic_operations import copy_defn\n",
     "\n",
     "from_field = quantity_factory.ones(dims=(X_DIM, Y_DIM, Z_DIM), units=\"none\", dtype=\"float\")\n",
     "to_field = quantity_factory.zeros(dims=(X_DIM, Y_DIM, Z_DIM), units=\"none\", dtype=\"float\")\n",
